--- a/AssessmentMatematica/AssessmentMatematica/Projeto3.csproj
+++ b/AssessmentMatematica/AssessmentMatematica/Projeto3.csproj
@@ -3,6 +3,9 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <ApplicationIcon />
+    <Win32Resource />
+    <StartupObject>AssessmentMatematica.Program</StartupObject>
   </PropertyGroup>
 
 </Project>
